io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegaltypeforstoragefield4/NonStorage.java
package io.hotmoka.tests.errors.illegaltypeforstoragefield4;

public class NonStorage implements MyInterface {
}